--- a/Hovos/Views/SingleViews/CustomAnnotation.xib
+++ b/Hovos/Views/SingleViews/CustomAnnotation.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -17,47 +18,54 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomAnnotation" customModule="Hovos" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="eMo-7Q-Ead" customClass="CustomAnnotation" customModule="Hovos" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="263" height="255"/>
+            <rect key="frame" x="0.0" y="0.0" width="257" height="193"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TlR-f7-2jh">
-                    <rect key="frame" x="5" y="5" width="253" height="245"/>
+                    <rect key="frame" x="5" y="5" width="247" height="183"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OE3-rV-3hy">
-                            <rect key="frame" x="5" y="75.5" width="243" height="164.5"/>
+                            <rect key="frame" x="5" y="30" width="237" height="145"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VaH-oh-wVm">
-                                    <rect key="frame" x="5" y="53" width="233" height="19"/>
+                                    <rect key="frame" x="5" y="40" width="227" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="f4I-VE-fCD"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
                                     <color key="textColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IAz-hT-5mL">
-                                    <rect key="frame" x="5" y="99" width="233" height="60.5"/>
+                                    <rect key="frame" x="5" y="90" width="227" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="Bvd-Fw-zec"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
                                     <color key="textColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRt-fp-AOr">
-                                    <rect key="frame" x="5" y="77" width="233" height="17"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRt-fp-AOr">
+                                    <rect key="frame" x="5" y="65" width="227" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="873-XT-Jsk"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="IAz-hT-5mL" secondAttribute="trailing" constant="5" id="4ku-ms-ukb"/>
-                                <constraint firstItem="TRt-fp-AOr" firstAttribute="top" secondItem="VaH-oh-wVm" secondAttribute="bottom" constant="5" id="666-71-rc9"/>
-                                <constraint firstAttribute="trailing" secondItem="VaH-oh-wVm" secondAttribute="trailing" constant="5" id="FsX-bF-gU8"/>
-                                <constraint firstAttribute="bottom" secondItem="IAz-hT-5mL" secondAttribute="bottom" constant="5" id="GLC-03-DSJ"/>
-                                <constraint firstItem="VaH-oh-wVm" firstAttribute="centerX" secondItem="OE3-rV-3hy" secondAttribute="centerX" id="MCw-Wx-yr5"/>
-                                <constraint firstItem="TRt-fp-AOr" firstAttribute="leading" secondItem="OE3-rV-3hy" secondAttribute="leading" constant="5" id="NnH-di-DoF"/>
-                                <constraint firstItem="TRt-fp-AOr" firstAttribute="centerX" secondItem="OE3-rV-3hy" secondAttribute="centerX" id="Yns-b5-dg1"/>
-                                <constraint firstAttribute="trailing" secondItem="TRt-fp-AOr" secondAttribute="trailing" constant="5" id="Zwd-lZ-2KV"/>
-                                <constraint firstItem="VaH-oh-wVm" firstAttribute="leading" secondItem="OE3-rV-3hy" secondAttribute="leading" constant="5" id="hiE-YW-KJy"/>
-                                <constraint firstItem="IAz-hT-5mL" firstAttribute="leading" secondItem="OE3-rV-3hy" secondAttribute="leading" constant="5" id="oAl-4N-rgn"/>
-                                <constraint firstItem="IAz-hT-5mL" firstAttribute="top" secondItem="TRt-fp-AOr" secondAttribute="bottom" constant="5" id="qMj-S6-1hs"/>
+                                <constraint firstItem="VaH-oh-wVm" firstAttribute="leading" secondItem="OE3-rV-3hy" secondAttribute="leading" constant="5" id="3Y4-es-agf"/>
+                                <constraint firstItem="TRt-fp-AOr" firstAttribute="top" secondItem="VaH-oh-wVm" secondAttribute="bottom" constant="5" id="4ht-XS-gY2"/>
+                                <constraint firstItem="IAz-hT-5mL" firstAttribute="top" secondItem="TRt-fp-AOr" secondAttribute="bottom" constant="5" id="5Ht-gI-98Q"/>
+                                <constraint firstAttribute="bottom" secondItem="IAz-hT-5mL" secondAttribute="bottom" constant="5" id="Ccs-Ia-A3D"/>
+                                <constraint firstAttribute="trailing" secondItem="VaH-oh-wVm" secondAttribute="trailing" constant="5" id="Ips-nf-bri"/>
+                                <constraint firstAttribute="trailing" secondItem="TRt-fp-AOr" secondAttribute="trailing" constant="5" id="NQF-6B-CAc"/>
+                                <constraint firstItem="IAz-hT-5mL" firstAttribute="leading" secondItem="OE3-rV-3hy" secondAttribute="leading" constant="5" id="kd6-Ca-42Z"/>
+                                <constraint firstAttribute="trailing" secondItem="IAz-hT-5mL" secondAttribute="trailing" constant="5" id="kdt-EI-noZ"/>
+                                <constraint firstItem="TRt-fp-AOr" firstAttribute="leading" secondItem="OE3-rV-3hy" secondAttribute="leading" constant="5" id="oQ2-C3-RsP"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="corners">
@@ -65,15 +73,16 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lMS-Fq-KGM">
-                            <rect key="frame" x="89" y="37.5" width="75" height="75"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="userprofile" translatesAutoresizingMaskIntoConstraints="NO" id="lMS-Fq-KGM">
+                            <rect key="frame" x="98.5" y="10" width="50" height="50"/>
+                            <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="75" id="Az6-PF-dBU"/>
-                                <constraint firstAttribute="width" constant="75" id="DfD-qb-Z4X"/>
+                                <constraint firstAttribute="height" constant="50" id="JQX-pI-leP"/>
+                                <constraint firstAttribute="width" constant="50" id="x17-OM-tbd"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="corners">
-                                    <real key="value" value="37.5"/>
+                                    <real key="value" value="25"/>
                                 </userDefinedRuntimeAttribute>
                                 <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                     <color key="value" red="0.98039215690000003" green="0.96078431369999995" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -86,25 +95,24 @@
                     </subviews>
                     <color key="backgroundColor" name="orangeColor"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="OE3-rV-3hy" secondAttribute="trailing" constant="5" id="3ZH-xj-nHb"/>
-                        <constraint firstItem="VaH-oh-wVm" firstAttribute="top" secondItem="lMS-Fq-KGM" secondAttribute="bottom" constant="16" id="6iO-9b-T2K"/>
-                        <constraint firstItem="lMS-Fq-KGM" firstAttribute="centerX" secondItem="TlR-f7-2jh" secondAttribute="centerX" id="OHm-BH-eQe"/>
-                        <constraint firstAttribute="bottom" secondItem="OE3-rV-3hy" secondAttribute="bottom" constant="5" id="dE0-ge-rFu"/>
-                        <constraint firstItem="OE3-rV-3hy" firstAttribute="top" secondItem="lMS-Fq-KGM" secondAttribute="bottom" constant="-37" id="dfe-fS-JQF"/>
-                        <constraint firstItem="lMS-Fq-KGM" firstAttribute="top" secondItem="TlR-f7-2jh" secondAttribute="top" constant="37.5" id="kmP-1W-axj"/>
-                        <constraint firstItem="OE3-rV-3hy" firstAttribute="leading" secondItem="TlR-f7-2jh" secondAttribute="leading" constant="5" id="v4J-0D-jKa"/>
+                        <constraint firstItem="OE3-rV-3hy" firstAttribute="top" secondItem="TlR-f7-2jh" secondAttribute="top" constant="30" id="197-of-E4N"/>
+                        <constraint firstAttribute="trailing" secondItem="OE3-rV-3hy" secondAttribute="trailing" constant="5" id="7dG-8O-4zp"/>
+                        <constraint firstItem="lMS-Fq-KGM" firstAttribute="top" secondItem="TlR-f7-2jh" secondAttribute="top" constant="10" id="9vs-D4-ZY8"/>
+                        <constraint firstItem="VaH-oh-wVm" firstAttribute="top" secondItem="lMS-Fq-KGM" secondAttribute="bottom" constant="10" id="E5N-k6-Ot9"/>
+                        <constraint firstItem="OE3-rV-3hy" firstAttribute="leading" secondItem="TlR-f7-2jh" secondAttribute="leading" constant="5" id="Usn-0P-Ebj"/>
+                        <constraint firstItem="lMS-Fq-KGM" firstAttribute="centerX" secondItem="TlR-f7-2jh" secondAttribute="centerX" id="dXP-CH-tBu"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="a9U-fw-m1y"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="TlR-f7-2jh" firstAttribute="leading" secondItem="a9U-fw-m1y" secondAttribute="leading" constant="5" id="5T6-Va-FD0"/>
-                <constraint firstItem="a9U-fw-m1y" firstAttribute="bottom" secondItem="TlR-f7-2jh" secondAttribute="bottom" constant="5" id="7BL-QH-V4S"/>
-                <constraint firstItem="a9U-fw-m1y" firstAttribute="trailing" secondItem="TlR-f7-2jh" secondAttribute="trailing" constant="5" id="jEk-c0-iLh"/>
-                <constraint firstItem="TlR-f7-2jh" firstAttribute="top" secondItem="a9U-fw-m1y" secondAttribute="top" constant="5" id="urk-qg-6eY"/>
+                <constraint firstItem="TlR-f7-2jh" firstAttribute="trailing" secondItem="a9U-fw-m1y" secondAttribute="trailing" constant="-5" id="Hur-J0-aYx"/>
+                <constraint firstAttribute="bottom" secondItem="TlR-f7-2jh" secondAttribute="bottom" constant="5" id="k9I-Yg-ptB"/>
+                <constraint firstItem="TlR-f7-2jh" firstAttribute="leading" secondItem="a9U-fw-m1y" secondAttribute="leading" constant="5" id="qKD-vO-KsB"/>
+                <constraint firstItem="TlR-f7-2jh" firstAttribute="top" secondItem="a9U-fw-m1y" secondAttribute="top" constant="5" id="ytL-SP-gwp"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="a9U-fw-m1y"/>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="border">
                     <real key="value" value="1"/>
@@ -119,12 +127,16 @@
                 <outlet property="lstseen" destination="TRt-fp-AOr" id="DfG-La-LmL"/>
                 <outlet property="name" destination="VaH-oh-wVm" id="TiX-rF-ynx"/>
             </connections>
-            <point key="canvasLocation" x="29.600000000000001" y="-6.746626686656672"/>
+            <point key="canvasLocation" x="24.800000000000001" y="-42.728635682158924"/>
         </view>
     </objects>
     <resources>
+        <image name="userprofile" width="32" height="32"/>
         <namedColor name="orangeColor">
-            <color red="1" green="0.35294117647058826" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.41176470588235292" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
